تعديل المنطق الحساب واضافة كود الاعلانات 15

--- a/index.html
+++ b/index.html
@@ -227,12 +227,7 @@
                 <p class="text-sm text-gray-500 mt-1">
                     * يتم حسابها بضرب عدد أيام الإجازات المستحقة في الأجر اليومي، وبمجموع لا يتجاوز **آخر سنتين** من الخدمة.
                     <br>
-                    * تطبق معادلة احتساب الإجازات بشكل نسبي (كسور السنة) باستخدام **365 يوماً** في السنة، والنتيجة النهائية لعدد الأيام يتم **تقريبها لأقرب عدد صحيح**:
-                        <ul>
-                            <li>**14 يوماً** عن كل سنة خدمة لم يكمل فيها العامل خمس سنوات.</li>
-                            <li>**21 يوماً** عن كل سنة خدمة أكمل فيها العامل خمس سنوات أو أكثر.</li>
-                        </ul>
-                    * **ملاحظة:** إذا كانت مدة الخدمة خمس سنوات أو أكثر، فإن السنة التي تلي إكمال أربع سنوات تحسب بمعدل $21$ يوماً، والسنة التي تسبقها تحسب بمعدل $14$ يوماً.
+                    * تطبق معادلة احتساب الإجازات بشكل نسبي (كسور السنة) باستخدام **365 يوماً**، والنتيجة النهائية لعدد الأيام يتم **تقريبها لأقرب عدد صحيح**.
                 </p>
             </div>
             
