--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>حاسبة الحقوق العمالية</title>
+
+    <!--
+        أيقونة الموقع (Favicon)
+        تم تعديل المسار والنوع ليناسب ملف الأيقونة الذي تم رفعه (icon.ico.ico)
+    -->
+    <link rel="icon" type="image/x-icon" href="icon.ico.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="icon.ico.ico">
+
     <!-- Google AdSense Code -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3772059497395785"
      crossorigin="anonymous"></script> 
