--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 </div>
             </div>
 
-            <!-- New Checkbox Layout (Flex Container) -->
-            <div class="space-y-4">
+            <!-- Entitlement Options Box - ADDED bg-blue-50, p-4, rounded-lg, border border-blue-200 -->
+            <div class="space-y-4 bg-blue-50 p-4 rounded-lg border border-blue-200">
                 <p class="block text-sm font-bold text-gray-700">خيارات الاستحقاق والتعويض</p>
                 
                 <!-- Row 1: Social Security & Notice Compensation -->
@@ -169,7 +169,7 @@
                     </div>
                 </div>
             </div>
-            <!-- End New Checkbox Layout -->
+            <!-- End Entitlement Options Box -->
 
             
             <!-- Overtime Input Group -->
@@ -190,10 +190,10 @@
             <!-- Holiday and Friday Input Group (now separated) -->
             <label class="block text-sm font-bold text-gray-700 mb-1">العمل في العطل والأعياد وأيام الجمع</label>
             <div class="space-y-4">
-                <!-- Holiday Input Group -->
+                <!-- Holiday Input Group (Updated Label) -->
                 <div class="flex items-end space-x-4 space-x-reverse">
                     <div class="flex-1">
-                        <label for="holidayDays" class="block text-sm font-medium text-gray-700">أيام العطل الرسمية</label>
+                        <label for="holidayDays" class="block text-sm font-medium text-gray-700">أيام العطل الرسمية والدينية</label>
                         <input type="number" id="holidayDays" class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out" placeholder="عدد الأيام">
                     </div>
                     <div class="flex-shrink-0 w-28">
