اضافة اعلانات اديسنس

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>حاسبة الحقوق العمالية</title>
 
-    <!-- رمز AdSense -->
+    <!-- رمز AdSense (هذا الكود كان موجودًا مسبقًا لرمز الإعلانات) -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3772059497395785"
      crossorigin="anonymous"></script>
     <!-- نهاية رمز AdSense -->
+
+    <!-- علامة الميتا المطلوبة للتحقق من ملكية الموقع لـ AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-3772059497395785">
+    <!-- نهاية علامة الميتا -->
 
     <link rel="icon" type="image/x-icon" href="icon.ico.ico">
     <link rel="shortcut icon" type="image/x-icon" href="icon.ico.ico">
